# nodejs-rust-ffi-playground

./: Cargo.toml  README.md  index.js  package-lock.json  package.json  rust.js
src/: lib.rs
