[package]
name = "rust-compute-experiment"
version = "1.0.0"
description = "Experimental project to benchmark rust FFI in nodejs"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
